# douchat-rs

server/: .env.example  .gitignore  Cargo.toml  apple-app-site-association  assetlinks.json  test.json  test_links.txt  test_ws.html
server/migrations/2024-04-11-144214_create_users/: up.sql
server/migrations/2024-04-14-231739_create_rooms/: up.sql
server/migrations/2024-04-14-232259_create_room_users/: down.sql  up.sql
server/migrations/2024-04-14-232732_create_messages/: up.sql
server/migrations/2024-04-15-145600_create_contact_requests/: down.sql  up.sql
server/migrations/2024-04-15-145923_create_contacts/: up.sql
server/migrations/2024-05-02-110814_create_message_readings/: down.sql  up.sql
server/migrations/2024-06-24-013509_update_users_add_onboarding/: down.sql  up.sql
server/migrations/2024-07-04-090449_create_user_devices/: down.sql  up.sql
server/migrations/2024-07-04-090738_create_user_notification_token/: down.sql  up.sql
server/migrations/2024-07-05-085408_create_user_pictures/: down.sql  up.sql
server/src/: documentation.rs  env.rs  http.rs  main.rs  schema.rs  state.rs
server/src/accounts/: contact_routes.rs  deep_link.rs  devices_routes.rs  mod.rs  onboarding_routes.rs
server/src/cdn/: picture.rs
server/src/db/: mod.rs
server/src/documentation/: mod.rs  paths.rs
server/src/error/: error_from_diesel.rs  error_from_fcm.rs  error_from_jwt.rs  error_from_serde_json.rs  error_from_uuid.rs  mod.rs
server/src/media/: mod.rs
server/src/messenger/: actions.rs  messenger_routes.rs  mod.rs  parser.rs  (+4 more)
server/utils/: Cargo.toml
(+135 files in other folders)
