[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["oauth"]
apple_auth = []
google_auth = []
oauth = ["apple_auth", "google_auth"]

[dependencies]
dotenvy = "0.15.7"
http-serde = "2.0.0"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4", "serde", "fast-rng"] }
actix-web = "4.5.1"
diesel = { version = "2.1.5", features = [
    "postgres",
    "chrono",
    "uuid",
    "r2d2",
] }
chrono = { version = "0.4.37", features = ["serde"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
reqwest = { version = "0.12.3", features = [
    "deflate",
    "stream",
    "gzip",
    "json",
] }
futures = "0.3.30"
random-names = "0.1.3"
actix = "0.13.3"
actix-web-actors = "4.3.0"
bytestring = "1.3.1"
diesel-enum = "0.2.1"
actix-files = "0.6.5"
rand = "0.8.5"
async-stream = "0.3.5"
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
utoipa = { version = "4.2.0", features = ["chrono", "time", "uuid", "url"] }
actix-multipart = "0.6.2"
